fix: addFollower 메소드 컨트롤러에서 서비스로 리팩토링